--- a/plugins/cloud-labymod-plugin/src/main/resources/plugin.yml
+++ b/plugins/cloud-labymod-plugin/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: potatocloud-labymod
-version: 1.2.0
+version: 1.3.0-BETA
 main: net.potatocloud.plugins.labymod.LabyModPlugin
 author: "TruaYT"
 
