--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>net.potatocloud</groupId>
     <artifactId>potatocloud</artifactId>
-    <version>1.2.0</version>
+    <version>1.3.0-BETA</version>
     <packaging>pom</packaging>
 
     <modules>
