--- a/plugins/cloud-command-plugin/pom.xml
+++ b/plugins/cloud-command-plugin/pom.xml
@@ -39,6 +39,12 @@
         </dependency>
 
         <dependency>
+            <groupId>net.potatocloud.core</groupId>
+            <artifactId>core</artifactId>
+            <version>1.3.0-BETA</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.velocitypowered</groupId>
             <artifactId>velocity-api</artifactId>
             <version>${velocity.version}</version>
