--- a/plugins/hub/pom.xml
+++ b/plugins/hub/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -10,7 +10,8 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>cloud-labymod-plugin</artifactId>
+    <groupId>net.potatocloud.plugins.hub</groupId>
+    <artifactId>hub</artifactId>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
@@ -24,8 +25,8 @@
             <url>https://repo.papermc.io/repository/maven-public/</url>
         </repository>
         <repository>
-            <id>labymod</id>
-            <url>https://dist.labymod.net/api/v1/maven/release/</url>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
         </repository>
     </repositories>
 
@@ -38,26 +39,21 @@
         </dependency>
 
         <dependency>
-            <groupId>org.spigotmc</groupId>
-            <artifactId>spigot-api</artifactId>
-            <version>${spigot.version}</version>
+            <groupId>com.velocitypowered</groupId>
+            <artifactId>velocity-api</artifactId>
+            <version>${velocity.version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
-            <groupId>net.labymod.serverapi</groupId>
-            <artifactId>server-bukkit</artifactId>
-            <version>1.0.6</version>
-        </dependency>
-        <dependency>
-            <groupId>net.labymod.serverapi</groupId>
-            <artifactId>server-common</artifactId>
-            <version>1.0.6</version>
+            <groupId>com.github.Carleslc.Simple-YAML</groupId>
+            <artifactId>Simple-Yaml</artifactId>
+            <version>${simpleyaml.version}</version>
         </dependency>
     </dependencies>
 
     <build>
-        <finalName>potatocloud-plugin-labymod-${project.version}</finalName>
+        <finalName>potatocloud-plugin-hub-${project.version}</finalName>
 
         <plugins>
             <plugin>
@@ -75,5 +71,6 @@
             </plugin>
         </plugins>
     </build>
+
 
 </project>
