--- a/plugins/proxy/pom.xml
+++ b/plugins/proxy/pom.xml
@@ -10,8 +10,8 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <groupId>net.potatocloud.plugins.notify</groupId>
-    <artifactId>cloud-notify-plugin</artifactId>
+    <groupId>net.potatocloud.plugins.proxy</groupId>
+    <artifactId>proxy</artifactId>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
@@ -27,6 +27,10 @@
         <repository>
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
+        </repository>
+        <repository>
+            <id>labymod</id>
+            <url>https://dist.labymod.net/api/v1/maven/release/</url>
         </repository>
     </repositories>
 
@@ -50,10 +54,23 @@
             <artifactId>Simple-Yaml</artifactId>
             <version>${simpleyaml.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>net.labymod.serverapi</groupId>
+            <artifactId>server-velocity</artifactId>
+            <version>1.0.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
-        <finalName>potatocloud-plugin-notify-${project.version}</finalName>
+        <finalName>potatocloud-plugin-proxy-${project.version}</finalName>
 
         <plugins>
             <plugin>
